# mcp-server-gravatar

./: .gitignore  Makefile  README.md  gravatar.py  gravatar_api_client.py  gravatar_client.py  main.py  openapi.yaml  pyproject.toml  test.py
gravatar_api_client/: README.md  pyproject.toml  setup.py
gravatar_api_client/.openapi-generator/: FILES
gravatar_api_client/docs/: AssociatedResponse.md  AvatarRating.md  AvatarsApi.md  GalleryImage.md  Interest.md  Language.md  Link.md  Profile.md  ProfilesApi.md  SetEmailAvatarRequest.md  VerifiedAccount.md
gravatar_api_client/openapi_client/: __init__.py  configuration.py  exceptions.py  rest.py
gravatar_api_client/openapi_client/api/: profiles_api.py
gravatar_api_client/openapi_client/models/: __init__.py  associated_response.py  crypto_wallet_address.py  error.py  interest.py  link.py  profile_payments.py  set_email_avatar_request.py  verified_account.py
gravatar_api_client/test/: test_avatar_rating.py  test_crypto_wallet_address.py  test_gallery_image.py  test_interest.py  test_link.py  test_profile.py  test_profile_contact_info.py  test_profile_payments.py  test_set_email_avatar_request.py  test_update_avatar_request.py  test_verified_account.py
gravatar_client/docs/: Avatar.md  CryptoWalletAddress.md  Error.md  ProfileContactInfo.md  ProfilePayments.md  UpdateAvatarRequest.md
gravatar_client/test/: test_associated_response.py  test_avatar.py  test_avatars_api.py  test_error.py  test_language.py  test_profiles_api.py
src/mcp_server_gravatar/: __init__.py  __main__.py  gravatar.py  gravatar_client.py  resources.py
src/openapi_client/: api_client.py
(+13 files in other folders)
