[project]
name = "mcp-server-gravatar"
version = "0.1.0"
description = "A stdio-based MCP server for fetching Gravatar profiles"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "click>=8.1.8",
    "httpx>=0.28.1",
    "mcp[cli]>=1.6.0",
    "pydantic>=2",
    "python-dateutil>=2.8.2",
    "typing-extensions>=4.7.1",
    "urllib3>=2.1.0,<3.0.0",
]
# tell the build backend where to find your package
packages = [
  { include = "mcp_server_gravatar", from = "src" },
  { include = "openapi_client", from = "src" },
]


[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.metadata]
allow-direct-references = true


[project.scripts]
mcp-server-gravatar = "mcp_server_gravatar:main"
